--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ numpy>=1.20.0
 tqdm>=4.62.0
 scikit-learn>=1.0.0
 tensorboard>=2.8.0
-accelerate>=0.26.0 
+accelerate>=0.26.0
+matplotlib>=3.5.0
+psutil>=5.9.0 
